--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Outfit:wght@500;700;800&display=swap" rel="stylesheet">
-<link rel="icon" href="logokataX.png" type="image/png">
+<link rel="icon" href="LogokataX.png" type="image/png">
 
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://tu-dominio.es/">
