--- a/index.html
+++ b/index.html
@@ -635,7 +635,7 @@ nav a:hover::after {
 
  <header>
     <a href="#hero" class="logo">
-      <img src="logokataX.png" alt="Logo">
+      <img src="LogokataX.png" alt="Logo">
       <span>kataX</span>
     </a>
     <nav>
@@ -763,7 +763,7 @@ nav a:hover::after {
   </div>
   
   <div class="logo" style="opacity: 1;">
-    <img src="logokataX.png" style="height: 30px; filter: grayscale(1);">
+    <img src="LogokataX.png" style="height: 30px; filter: grayscale(1);">
     <span style="font-size: 1.6rem; filter: grayscale(1);">kataX</span>
   </div>
 
