--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>kataX Studio | Diseño Web & Soluciones con IA</title>
+  <title>kataX Studio | Diseño Frontend</title>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Outfit:wght@500;700;800&display=swap" rel="stylesheet">
@@ -148,7 +148,7 @@
 
 /* El texto que aparece al lado */
 .whatsapp-float::before {
-  content: '¡Hablemos!';
+  content: ¿¡Hablamos?';
   position: absolute;
   right: 80px;
   background: rgba(8, 8, 12, 0.9);
@@ -650,33 +650,43 @@ nav a:hover::after {
 
   <main>
    <section id="hero" class="hero visible">
-  <div class="hero-badge">FRONTEND ARTISTS & AI SOLUTIONS</div>
-  <h1>Creamos el <br><span class="gradient-animate">Futuro Digital.</span></h1>
+  <div class="hero-badge">FRONTEND WEB'S & MORE</div>
+  <h1>Creamos <br><span class="gradient-animate"> Tu Futuro Digital.</span></h1>
   <p class="hero-text">
-    <span class="typewriter">Diseño de autor fusionado con Inteligencia Artificial.</span><br>
-    <span class="typewriter-delay">Exclusividad digital para marcas que no aceptan lo común.</span>
+    <span class="typewriter">La web digital hecha para ti, con un diseño adaptado a tus necesidades.</span><br>
   </p>
   <a href="#contact" class="btn btn-glow">Reservar Consultoría</a>
 </section>
+<section id="about">
+  <div class="about-grid">
+    
+    <div class="about-text">
+      <h2>¿Quiénes somos?</h2>
 
-    <section id="about">
-      <div class="about-grid">
-        <div class="about-text">
-          <h2>Una nueva era de <span>Emprendimiento.</span></h2>
-          <p>En <strong>kataX</strong>, la juventud no es una falta de experiencia, sino nuestra mayor ventaja. Nacimos en la era de la IA y el código fluido.</p>
-          <p>Somos dos mentes emprendedoras dedicadas a transformar ideas complejas en interfaces minimalistas. Creemos en la elegancia del negro, la fuerza del lila y la precisión de cada píxel.</p>
-          
-          <div class="stat-grid">
-            <div class="stat-card"><h4>∞</h4><p>Pasión por el código</p></div>
-            <div class="stat-card"><h4>AI</h4><p>Flujo de trabajo moderno</p></div>
-          </div>
+      <p><strong>kataX</strong> es una agencia de programación joven, versátil y obsesionada con el buen código. Para nosotros, la juventud no es un límite: es impulso, creatividad y precisión.</p>
+
+      <p>Somos dos mentes emprendedoras capaces de transformar cualquier idea en una interfaz minimalista, fluida y potente. Trabajamos con <strong>HTML</strong>, <strong>CSS</strong> y <strong>Python</strong> para crear experiencias digitales limpias, rápidas y hechas a medida. Creemos en la elegancia del negro, la fuerza del lila y la perfección en cada píxel.</p>
+
+      <div class="stat-grid">
+        <div class="stat-card">
+          <h4>∞</h4>
+          <p>Pasión por el código</p>
         </div>
-        <div class="about-visual">
-          <div style="width: 100%; height: 400px; background: linear-gradient(45deg, #08080c, #1a1a2e); border-radius: 40px; border: 1px solid var(--lila); display: flex; align-items: center; justify-content: center; font-size: 4rem;">X</div>
+        <div class="stat-card">
+          <h4>&lt;/&gt;</h4>
+          <p>Adaptación total</p>
         </div>
       </div>
-    </section>
+    </div>
 
+    <div class="about-visual">
+      <div style="width: 100%; height: 400px; background: linear-gradient(45deg, #08080c, #1a1a2e); border-radius: 40px; border: 1px solid var(--lila); display: flex; align-items: center; justify-content: center; font-size: 4rem;">
+        X
+      </div>
+    </div>
+
+  </div>
+</section>
     <section id="work">
   <h2 style="font-size: 3.5rem; margin-bottom: 50px; text-align: center;">Proyectos</h2>
   <div class="work-grid">
