--- a/index.html
+++ b/index.html
@@ -653,7 +653,7 @@ nav a:hover::after {
   <div class="hero-badge">FRONTEND WEB'S & MORE</div>
   <h1>Creamos <br><span class="gradient-animate"> Tu Futuro Digital.</span></h1>
   <p class="hero-text">
-    <span class="typewriter">La web digital hecha para ti, con un diseño adaptado a tus necesidades.</span><br>
+    <span>La web digital hecha para ti, con un diseño adaptado a tus necesidades.</span><br>
   </p>
   <a href="#contact" class="btn btn-glow">Reservar Consultoría</a>
 </section>
