--- a/index.html
+++ b/index.html
@@ -655,7 +655,7 @@ nav a:hover::after {
   <p class="hero-text">
     <span>La web digital hecha para ti, con un diseño adaptado a tus necesidades.</span><br>
   </p>
-  <a href="#contact" class="btn btn-glow">Reservar Consultoría</a>
+  <a href="#contact" class="btn btn-glow">Contactar con nosotros</a>
 </section>
 <section id="about">
   <div class="about-grid">
