--- a/index.html
+++ b/index.html
@@ -665,7 +665,7 @@ nav a:hover::after {
 
       <p><strong>kataX</strong> es una agencia de programación joven, versátil y obsesionada con el buen código. Para nosotros, la juventud no es un límite: es impulso, creatividad y precisión.</p>
 
-      <p>Somos dos mentes emprendedoras capaces de transformar cualquier idea en una interfaz minimalista, fluida y potente. Trabajamos con <strong>HTML</strong>, <strong>CSS</strong> y <strong>Python</strong> para crear experiencias digitales limpias, rápidas y hechas a medida. Creemos en la elegancia del negro, la fuerza del lila y la perfección en cada píxel.</p>
+      <p>Somos dos mentes emprendedoras capaces de transformar cualquier idea en una interfaz minimalista, fluida y potente. Trabajamos con <strong>HTML</strong>, <strong>CSS</strong> y <strong>Python</strong> para crear experiencias digitales limpias, rápidas y hechas a medida.</p>
 
       <div class="stat-grid">
         <div class="stat-card">
@@ -688,30 +688,30 @@ nav a:hover::after {
   </div>
 </section>
     <section id="work">
-  <h2 style="font-size: 3.5rem; margin-bottom: 50px; text-align: center;">Proyectos</h2>
+  <h2 style="font-size: 3.5rem; margin-bottom: 50px; text-align: center;">Proyectos Destacados</h2>
   <div class="work-grid">
     
     <div class="work-item" style="--bg-image: url('https://images.unsplash.com/photo-1460925895917-afdab827c52f?q=80&w=2426&auto=format&fit=crop')">
       <div class="light-effect"></div>
       <div class="work-content">
-        <h3>CalendAxel</h3>
-        <p>Sistema de gestión inteligente con arquitectura React.</p>
+        <h3>EJEMPLO 1</h3>
+        <p>(Todavía estamos trabajando en esto)</p>
       </div>
     </div>
 
     <div class="work-item" style="--bg-image: url('https://images.unsplash.com/photo-1576091160550-2173dba999ef?q=80&w=2340&auto=format&fit=crop')">
       <div class="light-effect"></div>
       <div class="work-content">
-        <h3>Fisiolución</h3>
-        <p>Landing page emocional con optimización de conversión.</p>
+        <h3>EJEMPLO 2</h3>
+        <p>(Todavía estamos trabajando en esto)</p>
       </div>
     </div>
 
     <div class="work-item" style="--bg-image: url('https://images.unsplash.com/photo-1550745165-9bc0b252726f?q=80&w=2340&auto=format&fit=crop')">
       <div class="light-effect"></div>
       <div class="work-content">
-        <h3>NoxLabs V1</h3>
-        <p>Ecosistema digital para creadores de tecnología.</p>
+        <h3>EJEMPLO 3</h3>
+        <p>(Todavía estamos trabajando en esto)</p>
       </div>
     </div>
 
@@ -719,21 +719,21 @@ nav a:hover::after {
 </section>
 
     <section id="prices" class="price-section">
-      <h2>Inversión <span>Transparente</span></h2>
+      <h2>TARIFA de SERVICIO </h2>
       <p style="color: var(--text-gray); margin-top: 15px;">Calidad premium a precio de lanzamiento.</p>
       
       <div class="price-box">
         <h3>Web Profesional Full-Service</h3>
-        <div class="price-amount">50€<span>/mes</span></div>
+        <div class="price-amount">50€<span>/pago único</span></div>
         <ul class="features-list">
-          <li>Diseño exclusivo kataX (Sin plantillas)</li>
-          <li>Desarrollo con React & Tailwind CSS</li>
-          <li>Mantenimiento técnico y actualizaciones</li>
+          <li>Diseño exclusivo </li>
+          <li>Desarrollo con HTML, PYTHON y CSS</li>
+          <li>Mantenimiento 24/7 </li>
           <li>Optimización SEO y Velocidad Google Core</li>
           <li>Integración de herramientas de IA</li>
-          <li>Soporte directo con los fundadores</li>
+          <li>Soporte directo 24/7</li>
         </ul>
-        <a href="#contact" class="btn btn-glow" style="display: block;">Quiero mi Web Ahora</a>
+        <a href="#contact" class="btn btn-glow" style="display: block;">Quiero mi Web </a>
       </div>
     </section>
 
@@ -769,7 +769,7 @@ nav a:hover::after {
 
  <footer>
   <div class="footer-left">
-    <p style="font-size: 0.85rem; opacity: 0.7;">© 2026 kataX Studio. <br>Crafted with Precision & AI.</p>
+    <p style="font-size: 0.85rem; opacity: 0.7;">2026 kataX Studio. <br>All rights reserved ©</p>
   </div>
   
   <div class="logo" style="opacity: 1;">
