--- a/index.html
+++ b/index.html
@@ -719,11 +719,10 @@ nav a:hover::after {
 </section>
 
     <section id="prices" class="price-section">
-      <h2>TARIFA de SERVICIO </h2>
-      <p style="color: var(--text-gray); margin-top: 15px;">Calidad premium a precio de lanzamiento.</p>
+  <h2 style="font-size: 3.5rem; margin-bottom: 50px; text-align: center;">TARIFA de SERVICIO</h2>
       
       <div class="price-box">
-        <h3>Web Profesional Full-Service</h3>
+        <h3>FRONTEND WEB</h3>
         <div class="price-amount">50€<span>/pago único</span></div>
         <ul class="features-list">
           <li>Diseño exclusivo </li>
