--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>kataX | Landing Page</title>
+  <title>kataX | Landing Pages</title>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Outfit:wght@500;700;800&display=swap" rel="stylesheet">
@@ -1186,7 +1186,7 @@ nav a:hover::after {
 
   <main>
    <section id="hero" class="hero visible">
-  <div class="hero-badge">LANDING PAGE & MORE</div>
+  <div class="hero-badge">LANDING PAGES & MORE</div>
   <h1>Creamos <br><span class="gradient-animate"> Tu Futuro Digital.</span></h1>
   <p class="hero-text">
     <span>La web digital hecha para ti, con un diseño adaptado a tus necesidades.</span><br>
@@ -1211,7 +1211,7 @@ nav a:hover::after {
   </div>
 </section>
    <section id="work">
-  <h2 style="font-size: 3.5rem; margin-bottom: 50px; text-align: center; opacity: 0; transform: translateY(20px); transition: opacity 0.8s ease, transform 0.8s ease;" class="visible">Proyectos Destacados</h2>
+  <h2 style="font-size: 3.5rem; margin-bottom: 50px; text-align: center; opacity: 100; transform: translateY(20px); transition: opacity 0.8s ease, transform 0.8s ease;" class="visible">Proyectos Destacados</h2>
   <div class="work-grid">
     
     <div class="work-item" style="--bg-image: url('https://images.unsplash.com/photo-1460925895917-afdab827c52f?q=80&w=2426&auto=format&fit=crop')">
@@ -1245,7 +1245,7 @@ nav a:hover::after {
   <h2 style="font-size: 3.5rem; margin-bottom: 50px; text-align: center;">TARIFA de SERVICIO</h2>
       
       <div class="price-box">
-        <h3>LANDING WEB</h3>
+        <h3>LANDING PAGE</h3>
         <div class="price-amount">50€<span>/pago único</span></div>
         <ul class="features-list">
           <li>Diseño exclusivo </li>
@@ -1427,6 +1427,5 @@ document.addEventListener('DOMContentLoaded', () => {
 </script>
 </body>
 </html>
-
 
 
