--- a/index.html
+++ b/index.html
@@ -1549,6 +1549,29 @@ document.addEventListener('DOMContentLoaded', () => {
 </script>
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NRPSFRRG" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </body>
+  <script type="module">
+  // Import the functions you need from the SDKs you need
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/12.9.0/firebase-app.js";
+  import { getAnalytics } from "https://www.gstatic.com/firebasejs/12.9.0/firebase-analytics.js";
+  // TODO: Add SDKs for Firebase products that you want to use
+  // https://firebase.google.com/docs/web/setup#available-libraries
+
+  // Your web app's Firebase configuration
+  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+  const firebaseConfig = {
+    apiKey: "AIzaSyCmBejCYfny3zW_uqVQXf2pWReyLcgFo90",
+    authDomain: "katax-studio.firebaseapp.com",
+    projectId: "katax-studio",
+    storageBucket: "katax-studio.firebasestorage.app",
+    messagingSenderId: "771574365721",
+    appId: "1:771574365721:web:953022cb12e72d341cf488",
+    measurementId: "G-J54ZKT5TEY"
+  };
+
+  // Initialize Firebase
+  const app = initializeApp(firebaseConfig);
+  const analytics = getAnalytics(app);
+</script>
 </html>
 
 
