Integrate Google Analytics tracking script
Added Google Analytics tracking code to the HTML.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-J54ZKT5TEY"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-J54ZKT5TEY');
+</script>
+  
   <meta charset="UTF-8">
   <title>kataX Studio | Landing Pages</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
