--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
 </script>
   
   <meta charset="UTF-8">
-  <title>kataX | LANDING PAGES</title> 
-  <meta name="description" content="Creamos Tu Futuro Digital.
-La web digital hecha para ti, con un diseño adaptado a tus necesidades.">
+  
+  <title>kataX | LANDING PAGES</title>
+  <meta name="description" content="Creamos Tu Futuro Digital. La web digital hecha para ti, con un diseño adaptado a tus necesidades.">
+  <link rel="icon" href="LogokataX.png" type="image/png">
+  
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Outfit:wght@500;700;800&display=swap" rel="stylesheet" media="print" onload="this.media='all'">
