Fix schema image and URL for kataX Studio
Updated image and URL in schema for kataX Studio.

--- a/index.html
+++ b/index.html
@@ -10,13 +10,10 @@
 
   gtag('config', 'G-J54ZKT5TEY');
 </script>
-  
   <meta charset="UTF-8">
-  
   <title>kataX | LANDING PAGES</title>
   <meta name="description" content="Creamos Tu Futuro Digital. La web digital hecha para ti, con un diseño adaptado a tus necesidades.">
   <link rel="icon" href="LogokataX.png" type="image/png">
-  
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Outfit:wght@500;700;800&display=swap" rel="stylesheet" media="print" onload="this.media='all'">
@@ -46,8 +43,8 @@
     "@context": "https://schema.org",
     "@type": "ProfessionalService",
     "name": "kataX Studio",
-    "image": "https://tu-dominio.es/logokataX.png",
-    "url": "https://tu-dominio.es",
+    "image": "https://katax.es/logokataX.png",
+    "url": "https://katax.es",
     "telephone": "+34 631 90 24 74",
     "priceRange": "€€",
     "address": {
