Correct title casing in index.html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   gtag('config', 'G-J54ZKT5TEY');
 </script>
   <meta charset="UTF-8">
-  <title>kataX | LANDING PAGES</title>
+  <title>kataX | Landing Pages</title>
   <meta name="description" content="Creamos Tu Futuro Digital. La web digital hecha para ti, con un diseño adaptado a tus necesidades.">
   <link rel="icon" href="LogokataX.png" type="image/png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
